--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "quasar": "^2.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
